feat: update mortgage mobile styles

--- a/mortgage-2.html
+++ b/mortgage-2.html
@@ -248,7 +248,9 @@
         <div
           class="w-[calc(100%-32px)] xl:container mx-4 xl:mx-auto grid grid-cols-1 xl:grid-cols-3 grid-rows-[max(15vh,150px)] xl:grid-rows-[min(15vh,200px)_100px_1fr_48px] content-start h-screen border-l border-r border-blue-25"
         >
-          <h1 class="row-start-2 col-start-1 col-span-4 z-1 font-secondary text-7xl text-center">
+          <h1
+            class="row-start-2 col-start-1 col-span-4 z-1 justify-self-center font-secondary text-4.5xl lg:text-7xl leading-none max-w-[345px] sm:max-w-max text-center"
+          >
             Simulador de <span class="text-blue-100">Financiamento</span>
           </h1>
 
